@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.9.2</junit.version>
-        <java.version>23</java.version>
+        <java.version>21</java.version>
         <grpc.java.version>1.62.2</grpc.java.version>
         <tomcat.annotations.version>6.0.53</tomcat.annotations.version>
         <protoc.version>3.25.3</protoc.version>
@@ -522,12 +522,12 @@
                             <version>1.18.32</version>
                         </path>
                     </annotationProcessorPaths>
-                    <source>23</source>
-                    <target>23</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <compilerArgs>
 <!--                        <arg>&#45;&#45;add-modules</arg>-->
 <!--                        <arg>jakarta.annotation</arg>-->
-                        <arg>--enable-preview</arg>
+<!--                        <arg>&#45;&#45;enable-preview</arg>-->
                         <arg>--add-opens</arg>
                         <arg>java.base/javax.annotation=ALL-UNNAMED</arg>
                     </compilerArgs>
